# minecraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
cairo/: CMakeLists.txt  cairo-util.cpp  cairo-util.h
construction/: CMakeLists.txt
construction/3d-model-rasterization/: ArgParser.h  Arguments.h  CMakeLists.txt  Color.h  CubeModel.cpp  CubeModel.h  ModelBuilder.cpp  ModelBuilder.h  ModelGenerator.cpp  ModelGenerator.h  README.md  debugger-visualizer.natvis  main.cpp  string_format.h
construction/3d-model-rasterization/documentation/: Polygon Segmentation Algorithm.docx
construction/3d-model-rasterization/generation/: ModelGenerator.cpp  ModelGenerator.h  debug.cpp  debug.h
construction/3d-model-rasterization/geometry/: IntSize.h  LineSegment.cpp  LineSegment.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rectangle.h  Size.cpp  Size.h  Surface.h  geometry.cpp  geometry.h
construction/3d-model-rasterization/model-readers/: ModelReader.h  ModelReader_CS5400.cpp  ModelReader_CS5400.h  ModelReader_Wavefront.cpp  ModelReader_Wavefront.h
construction/3d-model-rasterization/model-writers/: ModelWriter_Wavefront.cpp  ModelWriter_Wavefront.h
construction/3d-model-rasterization/models/: cube.mtl  vp.mtl
construction/3d-model-rasterization/segmentation/: PolygonMath.cpp  PolygonMath.h  PolygonSegmentation.cpp  PolygonSegmentation.h  PolygonUnion.cpp  PolygonUnion.h
construction/3d-model-rasterization/test/: CMakeLists.txt  cairo-util.cpp  cairo-util.h  polygon-expectations.cpp  polygon-expectations.h  polygon-math-tests.cpp  polygon-segmentation-tests.cpp  ring-iterator-tests.cpp  static-polygons.cpp  static-polygons.h
construction/3d-model-rasterization/test/polygon-segmentation/: tests.cpp
construction/3d-model-rasterization/test/ring-iterator/: tests.cpp
construction/3d-model-rasterization/utils/: RingIterator.h
